fix(sdvv-frontend): removed double scrollbar by setting max width and height to 100% and set overflow to hidden in app's global styles. Fixed bottom part of the page content being cut off by reducing sidenav container view height to 95vh

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -17,7 +17,7 @@
   }
 }
 .sidenav-container {
-  height: 100vh;
+  height: 95vh;
   border: 1px solid rgba(0, 0, 0, 0.5);
 
   .mat-accordion {
